[project]
name = "djpress-publish-bluesky"
version = "1.1.0"
description = "A plugin for DJ Press that publishes new posts to Bluesky."
readme = "README.md"
authors = [{ name = "Stuart Maxwell", email = "stuart@amanzi.nz" }]
requires-python = ">=3.10"
dependencies = ["djpress>=0.20", "httpx>=0.28.0"]

[dependency-groups]
dev = ["bumpver>=2024.1130"]

[project.scripts]
djpress-publish-bluesky = "djpress_publish_bluesky:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.bumpver]
current_version = "1.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "ðŸ‘ bump version {old_version} -> {new_version}"
commit = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"src/djpress_publish_bluesky/__init__.py" = ['^__version__ = "{version}"$']
